# GenAI_session2

./: .env.example  README.md  pyproject.toml
common/: llm.py  prompts.py  retry.py
ner/: prompt.j2  prompt_few_shot.j2  run_single.py  schemas.py
news_classification/: prompt_few_shot.j2  prompt_zero_shot.j2  run_single.py  schemas.py
reasoning/: prompt.j2  schemas.py  solve.py
sentimentclassification/: prompt.j2  run_batch.py  run_single.py  schemas.py
sentimentclassification/data/: sentiments.csv  sentiments_out.csv
summarization/: prompt_article.j2  prompt_chat.j2  run_article.py  run_chat.py  run_chat_batch.py  schemas.py
summarization/data/: chat_transcripts.csv  chat_transcripts.jsonl  chat_transcripts_out.csv
